Test cases fixes
Signed-off-by: Himanshu.Chhikara <himanshu.chhikara@dpworld.com>